--- a/templates/events/index.html.twig
+++ b/templates/events/index.html.twig
@@ -4,7 +4,16 @@
 
 <ul>
 	{% for event in events %}
-		<li>{{ event.getName }} - {{ event.getPrice }}</li>	
+		<article>
+			<h2>{{ event.getName }}</h2>
+			<p>{{ event.description }}</p>
+			<ul>
+				<li>Lieu: {{ event.location }}</li>
+				<li> Price: $ {{ event.getPrice }}</li>
+				<li>Date: {{ event.startsAt|date('F d, Y \a\t h:i A') }}</li>
+			</ul>
+		</article>
+			
 	{% endfor %}
 </ul>
 
