updating index page

--- a/templates/events/index.html.twig
+++ b/templates/events/index.html.twig
@@ -10,7 +10,7 @@
 			<ul>
 				<li>Lieu: {{ event.location }}</li>
 				<li> Price: $ {{ event.getPrice }}</li>
-				<li>Date: {{ event.startsAt|date('F d, Y \a\t h:i A') }}</li>
+				<li>Date: {{ event.startsAt|date('F d, Y \\a\\t h:i A') }}</li>
 			</ul>
 		</article>
 			
